@@ -1,3 +1,8 @@
+2006-02-04  Nobuo Yamashita  <nobsun@sampou.org>
+
+	* src/kahua-spvr.scm:
+	signal mask set not to block any signals in new threads.
+	
 2006-02-03  Nobuo Yamashita  <nobsun@sampou.org>
 
 	* merge from main-trunc
